--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -205,7 +205,8 @@ h6 {
     line-height: 24px;  
     color: #737373;  
     box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
-    margin-top: 3rem;
+    position: relative;
+    bottom: -10rem;
    }
 
    .site-footer hr {  
