--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,68 +26,70 @@ h6 {
 
 
 #preloader {
-    position:fixed;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color:#735c80; 
-    z-index:999; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #735c80;
+    z-index: 999;
 }
 
 #preloader .inner {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);  
+    transform: translate(-50%, -50%);
 }
 
-.balls> div {
-  display: inline-block;
-  background-color: #fff;
-  width: 25px;
-  height: 25px;
-  border-radius: 100%;
-  margin: 3px;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  animation-name: animation;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+.balls>div {
+    display: inline-block;
+    background-color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 100%;
+    margin: 3px;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    animation-name: animation;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
 }
 
-.balls> div:nth-child(1) {
-    animation-duration:0.75s ;
+.balls>div:nth-child(1) {
+    animation-duration: 0.75s;
     animation-delay: 0;
 }
 
-.balls> div:nth-child(2) {
-    animation-duration: 0.75s ;
+.balls>div:nth-child(2) {
+    animation-duration: 0.75s;
     animation-delay: 0.12s;
 }
 
-.balls> div:nth-child(3) {
-    animation-duration: 0.75s  ;
+.balls>div:nth-child(3) {
+    animation-duration: 0.75s;
     animation-delay: 0.24s;
 }
- 
+
 @keyframes animation {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-  }
-  16% {
-    -webkit-transform: scale(0.1);
-    transform: scale(0.1);
-    opacity: 0.7;
-  }
-  33% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    opacity: 1; 
-  }
-} 
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    16% {
+        -webkit-transform: scale(0.1);
+        transform: scale(0.1);
+        opacity: 0.7;
+    }
+
+    33% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        opacity: 1;
+    }
+}
 
 
 /* 
@@ -106,7 +108,7 @@ h6 {
 }
 
 #navbar {
-    background-color:#735c80;
+    background-color: #735c80;
     z-index: 998;
 }
 
@@ -156,6 +158,7 @@ h6 {
     border: 2px solid #F7FFF7;
     color: #f7fff7;
     transition: .5s;
+    margin-left: .5rem;
 }
 
 #btn-search:hover {
@@ -178,13 +181,13 @@ h6 {
     width: 3.8rem;
     height: 3.8rem;
     border-radius: 50%;
-    color: #F7FFF7;  
+    color: #F7FFF7;
     transition: .3s;
 }
 
 .User-link:hover {
-    color: #F7FFF7; 
-    filter: drop-shadow(0 0 10px #343434); 
+    color: #F7FFF7;
+    filter: drop-shadow(0 0 10px #343434);
 }
 
 .nav-link {
@@ -198,114 +201,114 @@ h6 {
 =============
 */
 
-.site-footer {  
-    background-color: #26272b;  
-    padding: 20px 0 20px;  
-    font-size: 15px;  
-    line-height: 24px;  
-    color: #737373;  
-    box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
+.site-footer {
+    background-color: #26272b;
+    padding: 20px 0 20px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #737373;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
     position: relative;
-    bottom: -10rem;
-   }
+    bottom: -5rem;
+}
 
-   .site-footer hr {  
-    border-top-color: #bbb;  
-    opacity: 0.5;  
-   }
+.site-footer hr {
+    border-top-color: #bbb;
+    opacity: 0.5;
+}
 
-   .site-footer hr.small {  
-    margin: 20px 0;  
-   } 
+.site-footer hr.small {
+    margin: 20px 0;
+}
 
-   .site-footer h6 {  
-    color: #fff;  
-    font-size: 16px;  
-    text-transform: uppercase;  
-    margin-top: 5px;  
-    letter-spacing: 2px;  
-   }
+.site-footer h6 {
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px;
+}
 
-   .site-footer a {  
-    color: #737373;  
-   }
+.site-footer a {
+    color: #737373;
+}
 
-   .site-footer a:hover {  
-    color: #fff;  
-    text-decoration: none;  
-   }
-
-   .footer-links {  
-    padding-left: 0;  
-    list-style: none;  
+.site-footer a:hover {
+    color: #fff;
     text-decoration: none;
-   }
+}
 
-   .footer-links li {  
-    display: block;  
-   }  
-
-
-   .footer-links a {  
-    color: #737373;  
+.footer-links {
+    padding-left: 0;
+    list-style: none;
     text-decoration: none;
-   } 
+}
 
-   .footer-links a:active,  
-   .footer-links a:focus,  
-   .footer-links a:hover {  
-    color: #fff;  
-    text-decoration: none;  
-   }  
+.footer-links li {
+    display: block;
+}
 
-   .copyright-text {  
-    margin: 0;  
-   } 
 
-   p.copyright-text {
+.footer-links a {
+    color: #737373;
+    text-decoration: none;
+}
+
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.copyright-text {
+    margin: 0;
+}
+
+p.copyright-text {
     text-indent: 0px;
-   }
+}
 
-   .text-justify{
+.text-justify {
     text-align: justify;
     padding-right: 2.5rem;
     text-indent: 0px;
-   }
+}
 
-   .container-cont{
+.container-cont {
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     color: black;
-  }
-  
-  .title-cont{
-    margin-bottom: 14px;
-  }
+}
 
-  .subtitle-cont{
+.title-cont {
+    margin-bottom: 14px;
+}
+
+.subtitle-cont {
     margin-bottom: 2rem;
-  }
-  
-  .form-cont{
+}
+
+.form-cont {
     max-width: 600px;
     width: 100%;
     display: flex;
     flex-direction: column;
-  }
-  
-  .input-cont{
+}
+
+.input-cont {
     margin-bottom: 14px;
     height: 34px;
     border-radius: 4px;
     border: 1px solid black;
     padding: 0 8px;
     color: #735c80;
-  }
-  
-  .textarea-cont{
+}
+
+.textarea-cont {
     margin-bottom: 14px;
     border-radius: 4px;
     border: 1px solid black;
@@ -313,9 +316,9 @@ h6 {
     height: 94px;
     resize: none;
     color: #735c80;
-  }
-  
-  .button-cont{
+}
+
+.button-cont {
     height: 34px;
     border-radius: 4px;
     border: 0;
@@ -324,27 +327,31 @@ h6 {
     background-color: #735c80;
     font-size: 18px;
     transition: background-color, transform 0.8s;
-  }
-  
-  .button-cont:hover{
-    background-color: #741222;
-    transform: scale(1.01);
-  }
-
-.card-container{
-  padding: 0 0 2rem 0;
 }
 
-.formApi{
+.button-cont:hover {
+    background-color: #741222;
+    transform: scale(1.01);
+}
+
+.card-container {
+    padding: 0 0 2rem 0;
+}
+
+#card-img {
+    width: 100%
+}
+
+.formApi {
     margin: auto;
     margin-top: 3rem;
 }
 
-div .g-4{
+div .g-4 {
     margin: auto;
 }
 
-Card .card-book{
+Card .card-book {
     height: 100%;
     width: 250px;
     margin: auto;
@@ -359,14 +366,14 @@ h6.card-text {
     font-size: 16px;
 }
 
-img.card-img-top{
+img.card-img-top {
     height: 300px;
     width: 252px;
 }
 
-div.card-body{
+div.card-body {
     height: 13rem;
-    text-align: center; 
+    text-align: center;
 }
 
 .container {
@@ -392,15 +399,35 @@ h2.home {
     bottom: 3rem;
     width: 3rem;
     height: 3rem;
-    background: #9D50BB;
-    background: -webkit-linear-gradient(to right, #6E48AA, #9D50BB);
-    background: linear-gradient(to right, #6E48AA, #9D50BB);
+    background: #735c80;
+    background: -webkit-linear-gradient(to right, #72488a, #735c80);
+    background: linear-gradient(to right, #72488a, #735c80);
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     border-radius: 0.3rem;
     box-shadow: 0 0.1rem 0.6rem #00000099;
+    z-index: 997;
+}
+
+#btn-info {
+    color: #F7FFF7;
+    background-color: #72488a;
+    border-color: #72488a;
+}
+
+#btn-info:hover {
+    background-color: #741222;
+    transform: scale(1.01);
+}
+
+#empty-space {
+    height: 25rem;
+    background-position: center;
+    width: 55%;
+    margin: auto;
+    margin-bottom: 5rem;
 }
 
 
@@ -415,67 +442,83 @@ h2.home {
     #logo {
         margin: 0;
     }
+
     #nav-link {
         margin-bottom: .8rem;
     }
-    .User,.User-link {
+
+    .User,
+    .User-link {
         display: none;
     }
+
     #Vertical-Slider {
         position: absolute;
         top: 7rem;
         left: .7rem;
     }
-    Aside{
+
+    Aside {
         position: absolute;
         top: 38rem;
         left: 1rem;
     }
+
     .Aside-Title {
         margin: 1rem 5.5rem;
     }
-    #aside-authors{
+
+    #aside-authors {
         position: absolute;
         top: 63rem;
         left: 1rem;
     }
+
     #Title-One {
         margin-left: 2.4rem;
     }
+
     #disp-mob {
         display: none;
     }
+
     #section-profile {
         position: relative;
         top: 8rem;
     }
+
     .profile-link {
         position: relative;
         top: -4.5rem;
         left: 2rem;
         font-size: 9rem;
     }
+
     .profile-info {
         position: relative;
         top: -16rem;
         left: 11.5rem;
     }
+
     .profile-desc {
         position: relative;
         top: -18rem;
         left: 11.5rem;
         width: 8rem;
     }
+
     .profile-edit {
         position: relative;
         top: -20rem;
         left: 21rem;
     }
+
     #ad-info {
         position: relative;
         top: -6rem;
         left: -1rem;
     }
+
     #ad-info-s {
         position: absolute;
         top: 13rem;
@@ -490,25 +533,25 @@ h2.home {
     }
 }
 
-@media (max-width: 991px) {  
-    .site-footer [class^="col-"] {  
-        margin-bottom: 30px; 
-    }  
-   }
+@media (max-width: 991px) {
+    .site-footer [class^="col-"] {
+        margin-bottom: 30px;
+    }
+}
 
-@media (max-width: 767px) {  
-    .site-footer {  
+@media (max-width: 767px) {
+    .site-footer {
         position: absolute;
-        padding-bottom: 0; 
-        top: 87rem; 
-    }  
+        padding-bottom: 0;
+        top: 87rem;
+    }
 
     #footer {
-        top: 68rem; 
+        top: 68rem;
     }
-    
-    .site-footer .copyright-text,  
-    .site-footer {  
-        text-align: center;  
-    }  
-   }  
+
+    .site-footer .copyright-text,
+    .site-footer {
+        text-align: center;
+    }
+}
