--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -487,7 +487,7 @@ h2.home {
         top: 8rem;
     }
 
-    .profile-link {
+    #Profile-link {
         position: relative;
         top: -4.5rem;
         left: 2rem;
@@ -525,6 +525,7 @@ h2.home {
         left: -1rem;
         padding-bottom: -10rem;
     }
+    #
 }
 
 @media (min-width: 500px) {
@@ -541,9 +542,9 @@ h2.home {
 
 @media (max-width: 767px) {
     .site-footer {
-        position: absolute;
+        position: relative;
         padding-bottom: 0;
-        top: 87rem;
+        bottom: -5rem;
     }
 
     #footer {
