up to date: about page

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -430,6 +430,13 @@ h2.home {
     margin-bottom: 5rem;
 }
 
+.sobre {
+    padding-top: .25rem;
+}
+
+.sobre-sub {
+    padding-top: 1rem;
+}
 
 /* 
 ====================
