--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -327,6 +327,7 @@ p.copyright-text {
     background-color: #735c80;
     font-size: 18px;
     transition: background-color, transform 0.8s;
+    transition: .5s;
 }
 
 .button-cont:hover {
