--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -222,6 +222,14 @@ h6 {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
     position: relative;
     bottom: -5rem;
+    z-index: 998;
+}
+
+.site-footer .text-justify,
+.site-footer ul,
+.site-footer h6 {
+    position: relative;
+    left: 8.8rem;
 }
 
 .site-footer hr {
@@ -274,7 +282,10 @@ h6 {
 }
 
 .copyright-text {
+    text-align: center;
     margin-bottom: -5rem;
+    position: relative;
+    left: 12rem;
 }
 
 p.copyright-text {
@@ -654,6 +665,8 @@ h2.home {
 @media (max-width: 991px) {
     .site-footer [class^="col-"] {
         margin-bottom: 30px;
+        position: relative;
+        left: 0;
     }
 
     .container-cont {
@@ -663,7 +676,6 @@ h2.home {
 
 @media (max-width: 767px) {
     .site-footer {
-        position: relative;
         padding-bottom: 0;
         bottom: -5rem;
     }
@@ -677,8 +689,17 @@ h2.home {
         text-align: center;
     }
 
+    .site-footer .text-justify,
+    .site-footer ul,
+    .site-footer h6 {
+        position: relative;
+        left: .7rem;
+}
+
     .copyright-text {
         margin-bottom: 0;
+        position: relative;
+        left: 0;
     }
 
     .f-mob {
