--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,26 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 *::selection {
-    background-color: #72488a;
-    color: #F7FFF7;
+  background-color: #72488a;
+  color: #f7fff7;
 }
 
 p {
-    text-indent: 50px;
+  text-indent: 50px;
 }
 
 h5 {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 h6 {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 /* 
@@ -29,73 +29,71 @@ h6 {
 ==================
 */
 
-
 #preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #735c80;
-    z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #735c80;
+  z-index: 999;
 }
 
 #preloader .inner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.balls>div {
-    display: inline-block;
-    background-color: #fff;
-    width: 25px;
-    height: 25px;
-    border-radius: 100%;
-    margin: 3px;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    animation-name: animation;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+.balls > div {
+  display: inline-block;
+  background-color: #fff;
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  margin: 3px;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation-name: animation;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
-.balls>div:nth-child(1) {
-    animation-duration: 0.75s;
-    animation-delay: 0;
+.balls > div:nth-child(1) {
+  animation-duration: 0.75s;
+  animation-delay: 0;
 }
 
-.balls>div:nth-child(2) {
-    animation-duration: 0.75s;
-    animation-delay: 0.12s;
+.balls > div:nth-child(2) {
+  animation-duration: 0.75s;
+  animation-delay: 0.12s;
 }
 
-.balls>div:nth-child(3) {
-    animation-duration: 0.75s;
-    animation-delay: 0.24s;
+.balls > div:nth-child(3) {
+  animation-duration: 0.75s;
+  animation-delay: 0.24s;
 }
 
 @keyframes animation {
-    0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
 
-    16% {
-        -webkit-transform: scale(0.1);
-        transform: scale(0.1);
-        opacity: 0.7;
-    }
+  16% {
+    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
+    opacity: 0.7;
+  }
 
-    33% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
+  33% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
 }
-
 
 /* 
 ==============
@@ -104,108 +102,107 @@ h6 {
 */
 
 .navbar-brand {
-    margin-right: 5rem !important;
+  margin-right: 5rem !important;
 }
 
 #logo {
-    position:  relative;
-    left: 10rem;
-    width: 60px;
-    height: 60px;
+  position: relative;
+  left: 10rem;
+  width: 60px;
+  height: 60px;
 }
 
 #navbar {
-    background-color: #735c80;
-    z-index: 998;
+  background-color: #735c80;
+  z-index: 998;
 }
 
 .nav-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
 }
 
 #nav-link,
 #user-link {
-    position:  relative;
-    left: 33rem;
-    text-align: center;
-    color: #ebf0eb;
-    padding: 0 1.35rem !important;
-    font-size: 1.2rem;
-    transition: .3s;
-    padding: 0 10px;
+  position: relative;
+  left: 33rem;
+  text-align: center;
+  color: #ebf0eb;
+  padding: 0 1.35rem !important;
+  font-size: 1.2rem;
+  transition: 0.3s;
+  padding: 0 10px;
 }
 
 #nav-link:after,
 #user-link:after {
-    content: "";
-    position: absolute;
-    background-color: #741222;
-    height: 2px;
-    width: 0;
-    left: 0;
-    bottom: -8px;
-    transition: .3s;
+  content: "";
+  position: absolute;
+  background-color: #741222;
+  height: 2px;
+  width: 0;
+  left: 0;
+  bottom: -8px;
+  transition: 0.3s;
 }
 
 #nav-link:hover,
 #user-link:hover {
-    color: #fff;
+  color: #fff;
 }
 
-#nav-link:hover:after, 
-#user-link:hover:after{
-    width: 100%;
+#nav-link:hover:after,
+#user-link:hover:after {
+  width: 100%;
 }
 
 #navbar-icon {
-    border: none;
-    color: #735c80;
+  border: none;
+  color: #735c80;
 }
 
 #btn-search {
-    background-color: #735c80;
-    border: 2px solid #F7FFF7;
-    color: #f7fff7;
-    transition: .5s;
-    margin-left: .5rem;
+  background-color: #735c80;
+  border: 2px solid #f7fff7;
+  color: #f7fff7;
+  transition: 0.5s;
+  margin-left: 0.5rem;
 }
 
 #btn-search:hover {
-    background-color: #741222;
-    border: 2px solid #741222;
-    color: #F7FFF7;
+  background-color: #741222;
+  border: 2px solid #741222;
+  color: #f7fff7;
 }
 
 .User {
-    position: relative;
-    top: -.3rem;
-    left: -2rem;
-    font-size: 2.5rem;
-    padding-left: 5rem;
-    color: #F7FFF7;
-    z-index: 2;
+  position: relative;
+  top: -0.3rem;
+  left: -2rem;
+  font-size: 2.5rem;
+  padding-left: 5rem;
+  color: #f7fff7;
+  z-index: 2;
 }
 
 .User-link {
-    width: 3.8rem;
-    height: 3.8rem;
-    border-radius: 50%;
-    color: #F7FFF7;
-    transition: .3s;
+  width: 3.8rem;
+  height: 3.8rem;
+  border-radius: 50%;
+  color: #f7fff7;
+  transition: 0.3s;
 }
 
 .User-link:hover {
-    color: #F7FFF7;
-    filter: drop-shadow(0 0 10px #343434);
+  color: #f7fff7;
+  filter: drop-shadow(0 0 10px #343434);
 }
 
 .nav-link {
-    margin: .25rem;
+  margin: 0.25rem;
 }
-
 
 /* 
 =============
@@ -214,280 +211,279 @@ h6 {
 */
 
 .site-footer {
-    background-color: #26272b;
-    padding: 20px 0 20px;
-    font-size: 15px;
-    line-height: 24px;
-    color: #737373;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-    position: relative;
-    bottom: -5rem;
-    z-index: 998;
+  background-color: #26272b;
+  padding: 20px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+  position: relative;
+  bottom: -5rem;
+  z-index: 998;
 }
 
 .site-footer .text-justify,
 .site-footer ul,
 .site-footer h6 {
-    position: relative;
-    left: 8.8rem;
+  position: relative;
+  left: 8.8rem;
 }
 
 .site-footer hr {
-    border-top-color: #bbb;
-    opacity: 0.5;
+  border-top-color: #bbb;
+  opacity: 0.5;
 }
 
 .site-footer hr.small {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .site-footer h6 {
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    margin-top: 5px;
-    letter-spacing: 2px;
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
 }
 
 .site-footer a {
-    color: #737373;
+  color: #737373;
 }
 
 .site-footer a:hover {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .footer-links {
-    padding-left: 0;
-    list-style: none;
-    text-decoration: none;
+  padding-left: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
 .footer-links li {
-    display: block;
+  display: block;
 }
 
-
 .footer-links a {
-    color: #737373;
-    text-decoration: none;
+  color: #737373;
+  text-decoration: none;
 }
 
 .footer-links a:active,
 .footer-links a:focus,
 .footer-links a:hover {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .copyright-text {
-    text-align: center;
-    margin-bottom: -5rem;
-    position: relative;
-    left: 12rem;
+  text-align: center;
+  margin-bottom: -5rem;
+  position: relative;
+  left: 12rem;
 }
 
 p.copyright-text {
-    text-indent: 0px;
+  text-indent: 0px;
 }
 
 .text-justify {
-    text-align: justify;
-    padding-right: 2.5rem;
-    text-indent: 0px;
+  text-align: justify;
+  padding-right: 2.5rem;
+  text-indent: 0px;
 }
 
 .container-cont {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .title-cont {
-    position: relative;
-    left: -.5rem;
-    margin-bottom: 30px;
-    text-transform: uppercase;
-    color: #26272b;
+  position: relative;
+  left: -0.5rem;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  color: #26272b;
 }
 
 .subtitle-cont {
-    margin-bottom: 3rem;
-    width: 35rem;
-    text-align: center;
-    color: #343434;
+  margin-bottom: 3rem;
+  width: 35rem;
+  text-align: center;
+  color: #343434;
 }
 
 .form-cont {
-    max-width: 600px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  max-width: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .input-cont {
-    margin-bottom: 27px;
-    height: 34px;
-    border: none;
-    border-bottom: 1px solid #666666;
-    outline: none;
-    padding: 0 8px;
-    color: #735c80;
-    background-color: #f7fff7;
+  margin-bottom: 27px;
+  height: 34px;
+  border: none;
+  border-bottom: 1px solid #666666;
+  outline: none;
+  padding: 0 8px;
+  color: #735c80;
+  background-color: #f7fff7;
 }
 
 input[type="text"] {
-    padding-bottom:  10px;
+  padding-bottom: 10px;
 }
 
 .input-cont::placeholder,
 .textarea-cont::placeholder {
-    color:#735c80;
+  color: #735c80;
 }
 
 .textarea-cont {
-    margin-bottom: 27px;
-    border: none;
-    border-bottom: 1px solid #666666;
-    outline: none;
-    padding: 8px;
-    height: 94px;
-    resize: none;
-    color: #735c80;
-    background-color: #f7fff7;
+  margin-bottom: 27px;
+  border: none;
+  border-bottom: 1px solid #666666;
+  outline: none;
+  padding: 8px;
+  height: 94px;
+  resize: none;
+  color: #735c80;
+  background-color: #f7fff7;
 }
 
 .button-cont {
-    height: 36px;
-    width: 10rem;
-    border-radius: 4px;
-    border: 0;
-    cursor: pointer;
-    color: white;
-    background-color: #735c80;
-    font-size: 18px;
-    transition: background-color, transform 0.8s;
-    transition: .5s;
-    position: relative;
-    left: 35%;
+  height: 36px;
+  width: 10rem;
+  border-radius: 4px;
+  border: 0;
+  cursor: pointer;
+  color: white;
+  background-color: #735c80;
+  font-size: 18px;
+  transition: background-color, transform 0.8s;
+  transition: 0.5s;
+  position: relative;
+  left: 35%;
 }
 
 .button-cont:hover {
-    background-color: #741222;
-    transform: scale(1.01);
+  background-color: #741222;
+  transform: scale(1.01);
 }
 
 .card-container {
-    padding: 0 0 2rem 0;
+  padding: 0 0 2rem 0;
 }
 
 #card-img {
-    width: 100%
+  width: 100%;
 }
 
 .formApi {
-    margin: auto;
-    margin-top: 3rem;
+  margin: auto;
+  margin-top: 3rem;
 }
 
 div .g-4 {
-    margin: auto;
+  margin: auto;
 }
 
 Card .card-book {
-    height: 100%;
-    width: 250px;
-    margin: auto;
+  height: 100%;
+  width: 250px;
+  margin: auto;
 }
 
 p.card-text {
-    font-size: 14.5px;
-    text-indent: 0px;
+  font-size: 14.5px;
+  text-indent: 0px;
 }
 
 h6.card-text {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 img.card-img-top {
-    height: 300px;
-    width: 252px;
+  height: 300px;
+  width: 252px;
 }
 
 div.card-body {
-    height: 13rem;
-    text-align: center;
+  height: 13rem;
+  text-align: center;
 }
 
 .container {
-    margin: 3rem;
-    text-align: justify;
+  margin: 3rem;
+  text-align: justify;
 }
 
 .more {
-    margin: 1rem 15% 0 15%;
+  margin: 1rem 15% 0 15%;
 }
 
 .home {
-    text-align: center;
+  text-align: center;
 }
 
 h2.home {
-    color: #343434;
+  color: #343434;
 }
 
 #linkT {
-    position: fixed;
-    right: 3rem;
-    bottom: 3rem;
-    width: 3rem;
-    height: 3rem;
-    background: #735c80;
-    background: -webkit-linear-gradient(to right, #72488a, #735c80);
-    background: linear-gradient(to right, #72488a, #735c80);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    border-radius: 0.3rem;
-    box-shadow: 0 0.1rem 0.6rem #00000099;
-    z-index: 997;
+  position: fixed;
+  right: 3rem;
+  bottom: 3rem;
+  width: 3rem;
+  height: 3rem;
+  background: #735c80;
+  background: -webkit-linear-gradient(to right, #72488a, #735c80);
+  background: linear-gradient(to right, #72488a, #735c80);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 0.3rem;
+  box-shadow: 0 0.1rem 0.6rem #00000099;
+  z-index: 997;
 }
 
 #btn-info {
-    color: #F7FFF7;
-    background-color: #72488a;
-    border-color: #72488a;
+  color: #f7fff7;
+  background-color: #72488a;
+  border-color: #72488a;
 }
 
 #btn-info:hover {
-    background-color: #741222;
-    transform: scale(1.01);
+  background-color: #741222;
+  transform: scale(1.01);
 }
 
 #empty-space {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .load {
-    margin-top: 4rem;
+  margin-top: 4rem;
 }
 
 .sobre {
-    padding-top: .5rem;
+  padding-top: 0.5rem;
 }
 
 .sobre-sub {
-    padding-top: 1.5rem;
+  padding-top: 1.5rem;
 }
 
 .li-marc {
-    list-style: upper-alpha;
-    padding-bottom: .5rem;
+  list-style: upper-alpha;
+  padding-bottom: 0.5rem;
 }
 
 /* 
@@ -496,213 +492,212 @@ h2.home {
 ====================
 */
 
-
 @media (max-width: 600px) {
-    #logo {
-        position: relative;
-        left: 0;
-        margin: 0;
-    }
+  #logo {
+    position: relative;
+    left: 0;
+    margin: 0;
+  }
 
-    #nav-link {
-        position: relative;
-        left: 0;
-        margin-bottom: .8rem;
-    }
+  #nav-link {
+    position: relative;
+    left: 0;
+    margin-bottom: 0.8rem;
+  }
 
-    #nav-link:hover:after,
-    #user-link:hover:after {
-        position: absolute;
-        left: 6.9rem;
-        width: 35%;
-    }
+  #nav-link:hover:after,
+  #user-link:hover:after {
+    position: absolute;
+    left: 6.9rem;
+    width: 35%;
+  }
 
-    #nav-link:after,
-    #user-link:after {
-        bottom: -3px;
-    }
+  #nav-link:after,
+  #user-link:after {
+    bottom: -3px;
+  }
 
-    #empty-space {
-        margin-top: 2rem;
-        margin-bottom: -5rem;
-        width: 25rem;
-    }
+  #empty-space {
+    margin-top: 2rem;
+    margin-bottom: -5rem;
+    width: 25rem;
+  }
 
-    #empty-space img {
-        height: 20rem;
-        width: 25rem;
-    }
+  #empty-space img {
+    height: 20rem;
+    width: 25rem;
+  }
 
-    .User,
-    .User-link {
-        display: none;
-    }
+  .User,
+  .User-link {
+    display: none;
+  }
 
-    #Vertical-Slider {
-        position: absolute;
-        top: 7rem;
-        left: .7rem;
-    }
+  #Vertical-Slider {
+    position: absolute;
+    top: 7rem;
+    left: 0.7rem;
+  }
 
-    Aside {
-        position: absolute;
-        top: 38rem;
-        left: 1rem;
-    }
+  Aside {
+    position: absolute;
+    top: 38rem;
+    left: 1rem;
+  }
 
-    .Aside-Title {
-        margin: 1rem 5.5rem;
-    }
+  .Aside-Title {
+    margin: 1rem 5.5rem;
+  }
 
-    #aside-authors {
-        position: absolute;
-        top: 63rem;
-        left: 1rem;
-    }
+  #aside-authors {
+    position: absolute;
+    top: 63rem;
+    left: 1rem;
+  }
 
-    #Title-One {
-        margin-left: 2.4rem;
-    }
+  #Title-One {
+    margin-left: 2.4rem;
+  }
 
-    #disp-mob {
-        display: none;
-    }
+  #disp-mob {
+    display: none;
+  }
 
-    #section-profile {
-        position: relative;
-        top: 8rem;
-    }
+  #section-profile {
+    position: relative;
+    top: 8rem;
+  }
 
-    #Profile-link {
-        position: relative;
-        top: -4.5rem;
-        left: 2rem;
-        font-size: 9rem;
-    }
+  #Profile-link {
+    position: relative;
+    top: -4.5rem;
+    left: 2rem;
+    font-size: 9rem;
+  }
 
-    .profile-info {
-        position: relative;
-        top: -16rem;
-        left: 11.5rem;
-    }
+  .profile-info {
+    position: relative;
+    top: -16rem;
+    left: 11.5rem;
+  }
 
-    .profile-desc {
-        position: relative;
-        top: -18rem;
-        left: 11.5rem;
-        width: 8rem;
-    }
+  .profile-desc {
+    position: relative;
+    top: -18rem;
+    left: 11.5rem;
+    width: 8rem;
+  }
 
-    .profile-edit {
-        position: relative;
-        top: -20rem;
-        left: 21rem;
-    }
+  .profile-edit {
+    position: relative;
+    top: -20rem;
+    left: 21rem;
+  }
 
-    #ad-info {
-        position: relative;
-        top: -6rem;
-        left: -1rem;
-    }
+  #ad-info {
+    position: relative;
+    top: -6rem;
+    left: -1rem;
+  }
 
-    #ad-info-s {
-        position: absolute;
-        top: 13rem;
-        left: -1rem;
-        padding-bottom: -10rem;
-    }
+  #ad-info-s {
+    position: absolute;
+    top: 13rem;
+    left: -1rem;
+    padding-bottom: -10rem;
+  }
 
-    .title-cont {
-        position: relative;
-        left: .35rem;
-    }
+  .title-cont {
+    position: relative;
+    left: 0.35rem;
+  }
 
-    .subtitle-cont {
-        width: 25rem;
-    }
+  .subtitle-cont {
+    width: 25rem;
+  }
 
-    .form-cont {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  .form-cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .input-cont,
-    .textarea-cont {
-        width: 23rem;
-    }
+  .input-cont,
+  .textarea-cont {
+    width: 23rem;
+  }
 
-    .button-cont {
-        position: relative;
-        left: 0;
-    }
+  .button-cont {
+    position: relative;
+    left: 0;
+  }
 
-    .sobre,
-    .li-marc {
-        padding-bottom: 1rem;
-        width: 95%;
-        position: relative;
-        left: .5rem;
-    }
+  .sobre,
+  .li-marc {
+    padding-bottom: 1rem;
+    width: 95%;
+    position: relative;
+    left: 0.5rem;
+  }
 
-    .sobre-sub {
-        padding-bottom: 1rem;
-    }
+  .sobre-sub {
+    padding-bottom: 1rem;
+  }
 
-    .load {
-        margin-top: 3rem;
-        margin-bottom: 5rem;
-    }
+  .load {
+    margin-top: 3rem;
+    margin-bottom: 5rem;
+  }
 }
 
 @media (min-width: 500px) {
-    #Profile-link,
-    #user-link {
-        display: none;
-    }
+  #Profile-link,
+  #user-link {
+    display: none;
+  }
 }
 
 @media (max-width: 991px) {
-    .site-footer [class^="col-"] {
-        margin-bottom: 30px;
-        position: relative;
-        left: 0;
-    }
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
+    position: relative;
+    left: 0;
+  }
 
-    .container-cont {
-        min-height: 100vh;
-    }
+  .container-cont {
+    min-height: 100vh;
+  }
 }
 
 @media (max-width: 767px) {
-    .site-footer {
-        padding-bottom: 0;
-        bottom: -5rem;
-    }
+  .site-footer {
+    padding-bottom: 0;
+    bottom: -5rem;
+  }
 
-    #footer {
-        top: 68rem;
-    }
+  #footer {
+    top: 68rem;
+  }
 
-    .site-footer .copyright-text,
-    .site-footer {
-        text-align: center;
-    }
+  .site-footer .copyright-text,
+  .site-footer {
+    text-align: center;
+  }
 
-    .site-footer .text-justify,
-    .site-footer ul,
-    .site-footer h6 {
-        position: relative;
-        left: .7rem;
-}
+  .site-footer .text-justify,
+  .site-footer ul,
+  .site-footer h6 {
+    position: relative;
+    left: 0.7rem;
+  }
 
-    .copyright-text {
-        margin-bottom: 0;
-        position: relative;
-        left: 0;
-    }
+  .copyright-text {
+    margin-bottom: 0;
+    position: relative;
+    left: 0;
+  }
 
-    .f-mob {
-        display: none;
-    }
+  .f-mob {
+    display: none;
+  }
 }
