--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* 
@@ -13,63 +13,63 @@
 */
 
 #section-profile {
-    position: relative;
-    top: 3rem;
-    text-indent: 0;
+  position: relative;
+  top: 3rem;
+  text-indent: 0;
 }
 
 .profile-link {
-    position: relative;
-    top: -1rem;
-    left: 17rem;
-    font-size: 6rem;
-    color: #343434;
+  position: relative;
+  top: -1rem;
+  left: 17rem;
+  font-size: 6rem;
+  color: #343434;
 }
 
-.profile-link:hover{
-    color: #343434;
+.profile-link:hover {
+  color: #343434;
 }
 
 .profile-info {
-    position: absolute;
-    top: 1rem;
-    left: 24.5rem;
-    text-indent: 0;
+  position: absolute;
+  top: 1rem;
+  left: 24.5rem;
+  text-indent: 0;
 }
 
 #profile-name {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #profile-id {
-    font-weight: 200;
+  font-weight: 200;
 }
 
 .profile-edit {
-    position: absolute;
-    top: 1rem;
-    right: 18rem;
+  position: absolute;
+  top: 1rem;
+  right: 18rem;
 }
 
-.edit-btn{
-    background-color: #D9D9D9;
-    border: #D9D9D9;
-    color: #343434;
-    border-radius: 2rem;
-    font-weight: bold;
-    width: 8rem;
-    height: 2.3rem;
-    transition: .3s;
+.edit-btn {
+  background-color: #d9d9d9;
+  border: #d9d9d9;
+  color: #343434;
+  border-radius: 2rem;
+  font-weight: bold;
+  width: 8rem;
+  height: 2.3rem;
+  transition: 0.3s;
 }
 
 .edit-btn:hover {
-    box-shadow: 0 10px 20px rgba(0,0,0,0.5);  
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
 
 .profile-desc {
-    position: absolute;
-    top: 5rem;
-    left: 24.51rem;
+  position: absolute;
+  top: 5rem;
+  left: 24.51rem;
 }
 
 /* 
@@ -79,58 +79,58 @@
 */
 
 #section-info {
-    position: relative;
-    left: 0rem;
-    color: #343434;
-    text-indent: 0;
+  position: relative;
+  left: 0rem;
+  color: #343434;
+  text-indent: 0;
 }
 
 .ad-info,
 .ad-info-s {
-    width: 23rem;
-    height: 18rem;
-    border-radius: .5rem;
-    border: 1.8px solid #343434;
-    margin: 3rem 0rem 4rem 5rem;
-    padding: 1.5rem;
-    text-indent: 0;
+  width: 23rem;
+  height: 18rem;
+  border-radius: 0.5rem;
+  border: 1.8px solid #343434;
+  margin: 3rem 0rem 4rem 5rem;
+  padding: 1.5rem;
+  text-indent: 0;
 }
 
 .ad-info {
-    position: relative;
-    left: 13rem;
+  position: relative;
+  left: 13rem;
 }
 
 .ad-info-s {
-    position: absolute;
-    top: -3rem;
-    left: 38rem;
+  position: absolute;
+  top: -3rem;
+  left: 38rem;
 }
 
 #br-title {
-    font-weight: bolder;
-    padding-bottom: .5rem;
+  font-weight: bolder;
+  padding-bottom: 0.5rem;
 }
 
 #b-info {
-    font-weight: bold;
-    margin-bottom: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 2.5rem;
 }
 
 .adinfo-text {
-    padding-bottom: 1.5rem;
-    text-indent: 0;
+  padding-bottom: 1.5rem;
+  text-indent: 0;
 }
 
 .profile-text {
-    text-indent: 0;
+  text-indent: 0;
 }
 
 .div-btn-form {
-    margin: auto;
-    text-align: center;
+  margin: auto;
+  text-align: center;
 }
 
 .btn-form {
-    margin: 0 1rem 0 1rem;
+  margin: 0 1rem 0 1rem;
 }
